# zpass-tools-demo

./: .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  README.md  index.html  package-lock.json  package.json  server.py  shell.nix  vite.config.js  webpack.config.js
.github/workflows/: codeql.yml
issuer/: Cargo.toml
issuer/src/: error.rs  helpers.rs  lib.rs  wasm.rs
programs/datetime/: README.md  program.json
programs/datetime/inputs/: datetime.in
programs/datetime/src/: main.leo
programs/offchain_verifier/: README.md  program.json
programs/offchain_verifier/inputs/: offchain_verifier.in
programs/offchain_verifier/src/: main.leo
programs/offchain_verifier_keccak/: README.md  program.json
programs/offchain_verifier_keccak/inputs/: offchain_verifier_keccak.in
programs/offchain_verifier_keccak/src/: main.leo
programs/offchain_verifier_sha3/: README.md  program.json
programs/offchain_verifier_sha3/inputs/: offchain_verifier_sha3.in
programs/onchain_issuer/: README.md  program.json
programs/onchain_issuer_keccak/: README.md  program.json
programs/onchain_issuer_sha3/: README.md  program.json
programs/onchain_verifier/: README.md  program.json
src/: App.jsx  consts.ts  index.css  main.jsx  routing.jsx  useWebWorker.js
src/components/: AccountFromPrivateKey.jsx  CopyButton.jsx  Issuer.jsx  IssuerProgram.jsx  NewAccount.jsx
src/contexts/: account.js  global.js
src/hooks/: aleo-wasm-hook.js
src/pages/: IssuerApp.jsx
src/utils/: menu-helper.js
src/workers/: WorkerContext.js  WorkerProvider.jsx  keys.js  worker.js
(+17 files in other folders)
