[package]
name = "issuer"
version = "0.1.0"
authors = ["zPass"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies.snarkvm]
version = "0.15.4"
default-features = false
features = [
    "circuit",
    "console",
    "ledger",
    "parameters",
    "synthesizer",
    "utilities",
    "wasm",
    "anyhow",
    "colored",
    "rand",
    "serde_json",
    "thiserror",
    "dotenvy",
]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
thiserror = "1.0.50"
anyhow = "1.0.75"
js-sys = "0.3.64"
rand = "0.8.5"
ring = "0.16.20"
wasm-bindgen = "0.2.87"
indexmap = "2.0.0"
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3.3"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
hex = "0.4.3"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

[dev-dependencies]
wasm-bindgen-test = "0.3.37"


[profile.release]
## Tell `rustc` to optimize for small code size.
opt-level = "s"

